--- a/app/assets/stylesheets/public/main_page.css.sass
+++ b/app/assets/stylesheets/public/main_page.css.sass
@@ -4,7 +4,9 @@ $base: #54709b
 @import 'font-awesome'
 @import 'global'
 @import 'layout'
+
 @import 'blocks/modals/*'
+@import 'blocks/timer'
 
 =title
   font-size: 25px
@@ -75,7 +77,7 @@ $base: #54709b
       display: none
 
 .product-image
-  margin-right: 25px
+  margin: 5px 25px 0 0
   border: 1px solid #e8e8e9
   width: 200px
   height: 200px
@@ -96,6 +98,10 @@ $base: #54709b
 
 .product-details
   +clearfix
+
+.product-timer
+  margin: 20px 0 15px -10px
+  text-align: center
 
 .product-prices
   font-size: 18px
