Add link to home page to footer + TM sign

--- a/app/views/layouts/public.html.slim
+++ b/app/views/layouts/public.html.slim
@@ -5,7 +5,7 @@ html.layout
       - if content_for?(:title)
         = content_for(:title)
       - else
-        | SaveMoneyShop.ru — это уникальные товары по низким ценам, акции и щедрые скидки.
+        | SaveMoneyShop.ru&trade; — это уникальные товары по низким ценам, акции и щедрые скидки.
 
     - if content_for?(:meta_description)
       = content_for(:meta_description)
