--- a/app/views/public/pages/home.html.slim
+++ b/app/views/public/pages/home.html.slim
@@ -7,7 +7,7 @@ body data-view='app#layout'
       .main
         .header
           .header-title
-            | SaveMoneyShop.ru
+            | SaveMoneyShop.ru&trade;
           .header-slogan
             | Уникальные товары по низким ценам, акции и щедрые скидки.
 
@@ -112,7 +112,7 @@ body data-view='app#layout'
 
         .footer
           .footer-copy
-            | <b>&copy; SaveMoneyShop.ru</b> — это уникальные товары по низким ценам, акции&nbsp;и&nbsp;щедрые&nbsp;скидки.
+            | <b>&copy; SaveMoneyShop.ru&trade;</b> — это уникальные товары по низким ценам, акции&nbsp;и&nbsp;щедрые&nbsp;скидки.
           .footer-privacy
             span.g-dashed data-modal=privacy_path
               | Политика конфиденциальности
