--- a/app/views/public/landings/_footer.html.slim
+++ b/app/views/public/landings/_footer.html.slim
@@ -3,7 +3,9 @@
     .columns
       .column.is-16
         .footer-copy
-          | &copy; SaveMoneyShop.ru — это уникальные товары по низким ценам, акции&nbsp;и&nbsp;щедрые&nbsp;скидки.
+          ' &copy;
+          => link_to 'SaveMoneyShop.ru&trade;'.html_safe, root_path, target: '_blank'
+          | — это уникальные товары по низким ценам, акции&nbsp;и&nbsp;щедрые&nbsp;скидки.
         .footer-privacy
           span data-modal=privacy_path
             | Политика конфиденциальности
