--- a/app/views/layouts/public.html.slim
+++ b/app/views/layouts/public.html.slim
@@ -31,4 +31,7 @@ html.layout
         .sizes(320, 480, 768, 960, 1200)
         .names({320: '-mobile', 480: '-small_tablet', 768: '-big_tablet', 960: '-small_screen', 1200: '-big_screen'});
 
-  = yield
+  body data-view='app#layout'
+    - if Rails.env.production?
+      = render 'public/shared/counters'
+    = yield
