--- a/app/views/public/landings/_header.html.slim
+++ b/app/views/public/landings/_header.html.slim
@@ -48,8 +48,8 @@
 
           .sub_header-arrow
             = fa_icon 'chevron-right'
-          .sub_header-button data-section-name='main'
+          .sub_header-button.js-sub_header-buy data-section-name='main'
             | Заказать со скидкой <b>#{@landing.discount}%</b> &rarr;
-          .sub_header-ipad_button data-section-name='main'
+          .sub_header-ipad_button.js-sub_header-buy data-section-name='main'
             | Заказать<br>со скидкой <b>#{@landing.discount}% &rarr;</b>
 
