--- a/app/views/public/landings/_photos_slider.html.slim
+++ b/app/views/public/landings/_photos_slider.html.slim
@@ -9,7 +9,7 @@
       .photos_slider-photo_wrap
         .photos_slider-photo_inner
           .photos_slider-photo.js-main_photo style="background-image: url(#{photos.first.image.gallery.url});"
-          .photos_slider-zoom_button data-modal=public_landing_images_path
+          .photos_slider-zoom_button.js-open_gallery data-modal=public_landing_images_path
             = fa_icon 'search-plus'
       .photos_slider-arrow_right.js-show_next_photo
         = fa_icon 'chevron-right'
