--- a/app/views/layouts/public.html.slim
+++ b/app/views/layouts/public.html.slim
@@ -15,6 +15,7 @@ html.layout
     meta charset='utf-8'
     meta content='IE=edge,chrome=1' http-equiv='X-UA-Compatible'
     meta name='viewport' content='width=device-width, initial-scale=1.0'
+    meta name='google-site-verification' content='iiwaPF79dIpKiCW-QnsP0Rx-2myEPe8ZaPbwmVuVUMU'
 
     = include_gon
 
