Implement subheader title editing

--- a/app/assets/stylesheets/public/blocks/sub_header.sass
+++ b/app/assets/stylesheets/public/blocks/sub_header.sass
@@ -22,8 +22,14 @@
 .sub_header-title
   float: left
   font-weight: bold
-  line-height: 20px
+  line-height: 40px
   margin-right: 25px
+
+.sub_header-title_inner
+  display: inline-block
+  margin-top: -3px
+  line-height: 20px
+  vertical-align: middle
 
 .sub_header-price
   float: left
