--- a/app/assets/stylesheets/public/blocks/section.sass
+++ b/app/assets/stylesheets/public/blocks/section.sass
@@ -85,9 +85,11 @@
       margin-top: 0
 
 .section-image
+  margin-top: 10px
   text-align: center
 
   img
+    border-radius: 3px
     width: 100%
     max-width: 250px
     height: auto
