Improve reviews layout

--- a/app/assets/stylesheets/public/blocks/review.sass
+++ b/app/assets/stylesheets/public/blocks/review.sass
@@ -8,10 +8,11 @@
 
 .review-text
   position: relative
-  margin-bottom: 12px
+  margin-bottom: 20px
   padding: 15px 15px 15px 50px
-  border: 1px solid $transparent_10
-  box-shadow: 1px 1px 2px rgba(0, 0, 0, .15)
+  border: 1px solid darken($transparent_10, 3%)
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, .1)
+  border-radius: 2px
 
   .fa-quote-left
     position: absolute
@@ -23,15 +24,15 @@
 
 .review-image
   display: inline-block
-  margin-right: 10px
-  width: 35px
-  height: 35px
+  margin-right: 15px
+  width: 45px
+  height: 45px
   border-radius: 3px
   vertical-align: top
   box-shadow: 1px 1px 2px rgba(0, 0, 0, .1)
 
 .review-author
   display: block
-  padding-left: 18px
+  padding-left: 20px
   font-size: 12px
-  line-height: 35px
+  line-height: 45px
