--- a/app/views/public/landings/_cta_form.html.slim
+++ b/app/views/public/landings/_cta_form.html.slim
@@ -28,9 +28,9 @@
         | Заказать за <b>#{@landing.public_price}</b> рублей &rarr;
 
     .cta_form-info
-      ' Артикул товара: <b>##{@landing.apishops_article_id}</b>. Оставьте ваш телефон, и мы перезвоним вам в течение нескольких&nbsp;минут,
-      ' или&nbsp;позвоните нам по&nbsp;телефону
-      | <b>#{fa_icon('phone')} #{Landing::PHONE}</b> (круглосуточно,&nbsp;бесплатно,&nbsp;24/7).
+      ' Артикул товара: <b>##{@landing.apishops_article_id}</b>. Оставьте Ваш телефон, и мы перезвоним Вам в течение нескольких&nbsp;минут,
+      ' или&nbsp;сами&nbsp;позвоните нам по&nbsp;телефону
+      | <b>#{fa_icon('phone')} #{Landing::PHONE}</b> (круглосуточно, бесплатно,&nbsp;24/7).
 
   .price_tag
     .price_tag-inner
