--- a/app/views/public/landings/_cta_form.html.slim
+++ b/app/views/public/landings/_cta_form.html.slim
@@ -30,7 +30,7 @@
     .cta_form-info
       ' Артикул товара: <b>##{@landing.apishops_article_id}</b>. Оставьте Ваш телефон, и мы перезвоним Вам в течение нескольких&nbsp;минут,
       ' или&nbsp;сами&nbsp;позвоните нам по&nbsp;телефону
-      | <b>#{fa_icon('phone')} #{Landing::PHONE}</b> (круглосуточно, бесплатно,&nbsp;24/7).
+      | <b>#{fa_icon('phone')} #{Settings.phone}</b> (круглосуточно, бесплатно,&nbsp;24/7).
 
   .price_tag
     .price_tag-inner
