--- a/app/views/public/landings/_header.html.slim
+++ b/app/views/public/landings/_header.html.slim
@@ -22,7 +22,7 @@
             .top_menu-item_inner
               span.top_menu-item_dashed
                 | О магазине
-          .top_menu-item data-modal=faq_path
+          .top_menu-item data-modal=faq_path(landing_id: @landing.id)
             .top_menu-item_inner
               span.top_menu-item_dashed
                 | FAQ
