--- a/app/views/public/pages/about.html.slim
+++ b/app/views/public/pages/about.html.slim
@@ -1,5 +1,5 @@
 p
-  | Наш сайт &mdash; часть крупной сети интернет-магазинов, занимающейся розничной продажей популярных товаров уже несколько лет.
+  | <b>SaveMoneyShop.ru&trade;</b> &mdash; часть крупной сети интернет-магазинов, занимающейся розничной продажей популярных товаров уже несколько лет.
 p
   | Все наши товары являются оригиналами высшего качества, ввезены легально и имеют все необходимые сертификаты. У нас одни из самых низких цен, т.к. мы покупаем товары напрямую у производителя.
 p
