--- a/app/views/public/pages/faq.html.slim
+++ b/app/views/public/pages/faq.html.slim
@@ -1,12 +1,15 @@
 h3
   | — Как сделать заказ через сайт?
 p
-  | Нажмите кнопку "заказать", заполните необходимые поля и наши операторы свяжутся с Вами в течении часа в рабочее время.
+  | Укажите Ваш номер телефона и нажмите кнопку <b>"Заказать"</b>, и наши операторы свяжутся с Вами в течение часа.
 
 h3
   | — Как заказать товар по телефону?
 p
-  | Просто позвоните по указанному телефону и скажите оператору, что вы хотите заказать такой-то товар в таком-то количестве. Обязательно скажите оператору артикул товара, который указан справа, без артикула мы не сможем принять заказ, т.к. наш колл-центр работает со 100 000 товаров часто с похожими названиями и по названию товара оператор не сможет оформить заказ. Поэтому мы рекомендуем оформлять заказ на сайте.
+  | Просто позвоните нам по телефону <b>#{Settings.phone}</b> и скажите оператору, какой товар и в каком количестве Вы хотите заказать.
+    Обязательно скажите оператору артикул товара (<b>##{@landing.apishops_article_id}</b>), без артикула мы не сможем принять заказ,
+    т.к. наш колл-центр работает со 100 000 товаров часто с похожими названиями и по названию товара оператор не сможет оформить заказ.
+    Поэтому мы рекомендуем оформлять заказ на сайте.
 
 h3
   | — Как оплатить заказ?
