--- a/app/views/public/landings/success_modal.html.slim
+++ b/app/views/public/landings/success_modal.html.slim
@@ -1,13 +1,12 @@
 .success
   .success-header
     | Спасибо, что выбрали нас!
+    br
+    | Номер вашего заказа &mdash; <b>##{params[:order_id]}</b>.
 
   .success-body
     p
-      | Номер вашего заказа &mdash; <b>##{params[:order_id]}</b>.
-        Ваш заказ принят и будет исполнен в ближайшее время.
-    p
-      | Ожидайте звонка оператора в течение часа, или в ближайший рабочий день, если сегодня выходной.
+      | Ваш заказ принят и будет исполнен в ближайшее время. Ожидайте звонка оператора в течение часа.
     p
       | Вы так же сами можете позвонить нам, чтобы уточнить детали заказа, по&nbsp;телефону&nbsp;<b>#{Settings.phone}</b>.
         Не забудьте при этом сказать оператору номер вашего заказа (<b>##{params[:order_id]}</b>) и артикул товара (<b>##{@landing.apishops_article_id}</b>).
