--- a/app/views/public/landings/_guarantees.html.slim
+++ b/app/views/public/landings/_guarantees.html.slim
@@ -27,7 +27,7 @@
             .g-dashed data-modal=delivery_path
               | Доставка по всей России
           .guarantee-text
-            | Доставка по всей России. Доставка курьером, в пункты самовывоза или почтовые отделения по всей РФ, в том числе без предоплаты.
+            | Доставка курьером, в пункты самовывоза или почтовые отделения по всей РФ, в том числе без предоплаты.
 
       .columns.guarantee
         .column.is-3.offset.is-by_3
