More text fixes

--- a/app/views/public/landings/_main_section.html.slim
+++ b/app/views/public/landings/_main_section.html.slim
@@ -10,7 +10,7 @@
             .cta-description
               = @landing.short_description.html_safe
             .cta-warning
-              | Успейте заказать этот <b>уникальный товар</b> по&nbsp;суперцене
+              | Успейте заказать этот <b>уникальный товар</b> по&nbsp;выгодной&nbsp;цене
               br
               | (<b>скидка действительна до&nbsp;#{l(Time.zone.now, format: :date)} включительно</b>).
 
