--- a/app/views/layouts/public.html.slim
+++ b/app/views/layouts/public.html.slim
@@ -24,8 +24,10 @@ html.layout
 
     = javascript_include_tag 'public/application'
 
-
-    = render 'public/shared/fake_counters'
+    - if current_user
+      = render 'public/shared/fake_counters'
+    - else
+      = render 'public/shared/counters'
 
     - if content_for?(:script)
       = content_for(:script)
