--- a/app/views/public/shared/_counters.html.slim
+++ b/app/views/public/shared/_counters.html.slim
@@ -2,3 +2,29 @@ javascript:
   window.gaWidget = new Widgets.GoogleAnalytics('#{Settings.google_analytics.application_id}');
   window.gaWidget.trackPageview();
 
+/ Yandex.Metrika counter
+javascript:
+  (function (d, w, c) {
+    (w[c] = w[c] || []).push(function() {
+        try {
+            w.yaCounter28180473 = new Ya.Metrika({id:28180473,
+                    clickmap:true,
+                    trackLinks:true,
+                    accurateTrackBounce:true});
+        } catch(e) { }
+    });
+
+    var n = d.getElementsByTagName("script")[0],
+        s = d.createElement("script"),
+        f = function () { n.parentNode.insertBefore(s, n); };
+    s.type = "text/javascript";
+    s.async = true;
+    s.src = (d.location.protocol == "https:" ? "https:" : "http:") + "//mc.yandex.ru/metrika/watch.js";
+
+    if (w.opera == "[object Opera]") {
+        d.addEventListener("DOMContentLoaded", f, false);
+    } else { f(); }
+  })(document, window, "yandex_metrika_callbacks");
+
+noscript
+  | <div><img src="//mc.yandex.ru/watch/28180473" style="position:absolute; left:-9999px;" alt="" /></div>
