Show phone in header

--- a/app/assets/stylesheets/public/blocks/top_menu.sass
+++ b/app/assets/stylesheets/public/blocks/top_menu.sass
@@ -2,8 +2,7 @@
 
 .top_menu
   +clearfix
-  display: inline-block
-  vertical-align: top
+  float: left
 
 .top_menu-item
   float: left
@@ -55,5 +54,5 @@
 
 .layout.lt-small_screen
   .top_menu-item_inner
-    padding: 0 15px
+    padding: 0 13px
 
