--- a/app/assets/stylesheets/public/blocks/modals/modal.sass
+++ b/app/assets/stylesheets/public/blocks/modals/modal.sass
@@ -10,6 +10,13 @@
     .modal-body
       border-radius: 5px
 
+  &.is-inline
+    display: inline-block
+    width: auto
+
+  &.is-centered
+    text-align: center
+
 .modal-header
   overflow: hidden
   padding: 15px 15px 15px 25px
@@ -69,3 +76,5 @@
   border-radius: 3px
   cursor: pointer
 
+.modal-centered
+  text-align: center
