Implement anchors navigation

--- a/app/views/public/landings/_description.html.slim
+++ b/app/views/public/landings/_description.html.slim
@@ -1,5 +1,6 @@
 div data-section='description'
   .section
+    = section_anchor 'description'
     .js-scroll_fix
       .columns
         .column.is-16
