--- a/app/views/public/landings/_guarantees.html.slim
+++ b/app/views/public/landings/_guarantees.html.slim
@@ -1,4 +1,5 @@
 .section.is-dark_gradient data-section='guarantees'
+  = section_anchor 'guarantees'
   .js-scroll_fix
     .columns
       .column.is-16
