--- a/app/assets/stylesheets/public/blocks/section.sass
+++ b/app/assets/stylesheets/public/blocks/section.sass
@@ -2,6 +2,7 @@
 
 .section
   +clearfix
+  position: relative
   padding: 30px 0 40px
   background: #fff
   border-bottom: 1px solid $transparent_50
@@ -93,3 +94,11 @@
     width: 100%
     max-width: 250px
     height: auto
+
+.section-anchor
+  position: absolute
+  height: 1px
+  opacity: 0
+  left: 0
+  top: -90px
+  right: 0
