--- a/app/assets/stylesheets/public/imports.sass
+++ b/app/assets/stylesheets/public/imports.sass
@@ -1,3 +1,5 @@
+@import 'rails-sass-images'
+
 $transparent_10: lighten($base, 52%)
 $transparent_50: lighten($base, 35%)
 $transparent_100: lighten($base, 32%)
