--- a/app/assets/stylesheets/public/blocks/header.sass
+++ b/app/assets/stylesheets/public/blocks/header.sass
@@ -2,13 +2,13 @@
 
 .header
   position: relative
-  height: 49px
+  height: 79px
   color: #fff
   text-align: center
-  background: lighten($base, 5%)
-  background: linear-gradient(lighten($base, 5%), $base)
-  box-shadow: 0 2px 3px rgba(0, 0, 0, .25)
-  border-bottom: 1px solid rgba(0, 0, 0, .3)
+  background: rgba(lighten($transparent_10, 2%), .97)
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1)
+  border-top: 2px solid $light_300
+  border-bottom: 1px solid lighten($transparent_50, 12%)
   z-index: 2
 
   &.is-hidden
