--- a/app/assets/stylesheets/public/blocks/section.sass
+++ b/app/assets/stylesheets/public/blocks/section.sass
@@ -14,6 +14,9 @@
   &.is-dark
     background: $transparent_10
 
+  .layout.v-new &
+    padding: 50px 0
+
 .section-title
   padding: 0 0 30px
   text-align: center
