--- a/app/assets/stylesheets/public/blocks/photos_slider.sass
+++ b/app/assets/stylesheets/public/blocks/photos_slider.sass
@@ -44,14 +44,14 @@
   float: left
   width: 50px
   height: 330px
-  color: $transparent_100
+  color: rgba(#fff, .9)
   font-size: 20px
   line-height: 330px
   border-radius: 3px
   text-align: center
 
   &:hover
-    background: lighten($transparent_50, 15%)
+    background: rgba(#000, .1)
     cursor: pointer
 
 .photos_slider-previews
