--- a/app/assets/stylesheets/public/imports.sass
+++ b/app/assets/stylesheets/public/imports.sass
@@ -13,6 +13,7 @@ $dark_800: darken($base, 12%)
 $dark_900: darken($base, 16%)
 
 $bd: #c2c2c2
+$bd_light: #ECECEC
 $text: #555
 $text_light: #777
 $red: #D20A2F
