--- a/app/views/public/landings/new/_header.html.slim
+++ b/app/views/public/landings/new/_header.html.slim
@@ -2,4 +2,4 @@
   .js-scroll_fix
     .columns
       .column.is-16
-        img.logo src=image_path('public/logo.png')
+        img.logo src=image_path('public/logo_inline.png')
