--- a/app/views/public/landings/new/_main_section.html.slim
+++ b/app/views/public/landings/new/_main_section.html.slim
@@ -1,4 +1,7 @@
-.section.is-dark_gradient data-section='main'
+.section.has-bg_image data-section='main'
+  .main_bg
+    img.main_bg-image src=image_path('public/background.jpg')
+
   .js-scroll_fix
     .columns
       .cta-wrap.column.is-7.offset.is-by_2
