--- a/app/assets/stylesheets/public/blocks/header.sass
+++ b/app/assets/stylesheets/public/blocks/header.sass
@@ -4,12 +4,12 @@
   position: relative
   height: 79px
   color: #fff
-  text-align: center
+  // text-align: center
   background: rgba(lighten($transparent_10, 2%), .97)
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1)
   border-top: 2px solid $light_300
-  border-bottom: 1px solid lighten($transparent_50, 12%)
+  border-bottom: 1px solid $bd_light
   z-index: 2
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1)
 
   &.is-hidden
     opacity: 0
