--- a/app/assets/stylesheets/public/blocks/section.sass
+++ b/app/assets/stylesheets/public/blocks/section.sass
@@ -5,7 +5,7 @@
   position: relative
   padding: 30px 0 40px
   background: #fff
-  border-bottom: 1px solid $transparent_50
+  border-bottom: 1px solid $bd_light
 
   &.is-dark_gradient
     background: $transparent_10
@@ -13,6 +13,12 @@
 
   &.is-dark
     background: $transparent_10
+
+  &.has-bg_image
+    overflow: hidden
+    color: rgba(#fff, .9)
+    text-shadow: 0 1px 2px rgba(0, 0, 0, .5)
+    background: rgba(#000, .3)
 
   .layout.v-new &
     padding: 50px 0
