--- a/app/views/public/landings/show.html.slim
+++ b/app/views/public/landings/show.html.slim
@@ -5,25 +5,8 @@
   meta name='description' content=@landing.meta_description
 
 - content_for :stylesheet do
-  = stylesheet_link_tag "public/color_schemes/#{@landing.color_scheme}"
+  = stylesheet_link_tag "public/old_template/color_schemes/#{@landing.color_scheme}"
 
 - content_for :script do
   = javascript_include_tag 'http://img.apishops.org/SinglePageWebsites/custom/js/apishopsForm.utf8.js'
-
-= render 'header'
-= render 'main_section'
-= render 'description'
-= render 'reviews'
-= render 'guarantees'
-= render 'shipping'
-= render 'order'
-= render 'footer'
-
-= render 'public/shared/modals'
-
-- if params[:order_id]
-  div data-view='app#success' data={modal_path: public_landing_success_modal_path(order_id: params[:order_id])}
-
-- if @landing.draft?
-  = render 'color_selector'
 
