--- a/app/views/public/landings/templates/old/_main_section.html.slim
+++ b/app/views/public/landings/templates/old/_main_section.html.slim
@@ -14,10 +14,10 @@
               br
               | (<b>скидка действительна до&nbsp;#{l(Time.zone.now, format: :date)} включительно</b>).
 
-            = render 'cta_form', form_id: :top_form
+            = render 'public/landings/templates/old/cta_form', form_id: :top_form
 
       .photos_slider-wrap.column.is-7
-        = render 'photos_slider'
+        = render 'public/landings/templates/old/photos_slider'
 
     .columns
       .why_to_buy
