--- a/app/views/public/landings/templates/old/_order.html.slim
+++ b/app/views/public/landings/templates/old/_order.html.slim
@@ -11,6 +11,6 @@
 
     .columns
       .photos_slider-wrap.column.is-7
-        = render 'photos_slider', modifier: 'footer'
+        = render 'public/landings/templates/old/photos_slider', modifier: 'footer'
       .cta-wrap.column.is-7
-        = render 'cta_form', modifier: 'footer', form_id: :bottom_form
+        = render 'public/landings/templates/old/cta_form', modifier: 'footer', form_id: :bottom_form
