Add infrastructure for new template

--- a/app/views/public/pages/home.html.slim
+++ b/app/views/public/pages/home.html.slim
@@ -1,5 +1,5 @@
 - content_for :stylesheet do
-  = stylesheet_link_tag 'public/main_page'
+  = stylesheet_link_tag 'public/old_template/main_page'
 
 .layout
   .js-scroll_fix
