--- a/app/views/public/landings/show.html.slim
+++ b/app/views/public/landings/show.html.slim
@@ -5,7 +5,7 @@
   meta name='description' content=@landing.meta_description
 
 - content_for :stylesheet do
-  = stylesheet_link_tag "public/old_template/color_schemes/#{@landing.color_scheme}"
+  = stylesheet_link_tag "public/new_template/all.css"
 
 - content_for :script do
   = javascript_include_tag 'http://img.apishops.org/SinglePageWebsites/custom/js/apishopsForm.utf8.js'
