Add main headline

--- a/app/assets/stylesheets/public/new_template/blocks/header.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/header.sass
@@ -3,11 +3,11 @@
 .header
   border-top: 2px solid #7390B5
   border-bottom: 1px solid $bd
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1)
 
 .header-inner
-  margin: 0 auto
+  +acts_as_layout_row
   height: 70px
-  max-width: 1280px
   text-align: center
 
 .header-logo
