--- a/app/assets/stylesheets/public/new_template/imports.sass
+++ b/app/assets/stylesheets/public/new_template/imports.sass
@@ -1,4 +1,13 @@
+@import 'rails-sass-images'
+
 $bd: #ECECEC
+$red: #D20A2F
+
+=acts_as_layout_row
+  margin: 0 auto
+  max-width: 1280px
+  padding-left: 50px
+  padding-right: 50px
 
 =lh_100p
   &:after
@@ -53,7 +62,7 @@ $bd: #ECECEC
   box-shadow: 0px 1px 3px rgba(0, 0, 0, .25)
 
   &:focus
-    box-shadow: 0 0 10px rgba($light_200, .7)
+    // box-shadow: 0 0 10px rgba($light_200, .7)
     outline: 0
 
   &:hover
