--- a/app/views/public/landings/show.html.slim
+++ b/app/views/public/landings/show.html.slim
@@ -11,3 +11,4 @@
   = javascript_include_tag 'http://img.apishops.org/SinglePageWebsites/custom/js/apishopsForm.utf8.js'
 
 = render 'public/landings/templates/new/header', landing: @landing
+= render 'public/landings/templates/new/main_headline', landing: @landing
