--- a/app/assets/stylesheets/public/new_template/blocks/cta.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/cta.sass
@@ -6,7 +6,7 @@
 .cta-price
   position: relative
   display: inline-block
-  margin: 30px 0
+  margin: 0 0 30px
   padding: 10px 15px
   font-size: 25px
   line-height: 40px
@@ -22,6 +22,8 @@
     +hidpi-inline('public/rounded_arrow_white.png')
 
 .cta-price_new
+  border-bottom: 1px dotted #fff
+  padding-bottom: 3px
 
 .cta-price_delimeter
   margin: 0 7px
@@ -44,5 +46,5 @@
   text-shadow: 0 1px 2px rgba(0, 0, 0, .5)
 
 .cta-additional_info
-  font-size: 13px
+  font-size: 14px
   line-height: 20px
