--- a/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
@@ -45,7 +45,7 @@
   text-shadow: 0 1px 2px rgba(0, 0, 0, .5)
 
 .main_headline-description
-  margin: 30px 0
+  margin: 30px 0 45px
   font-size: 20px
   line-height: 30px
 
