--- a/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
@@ -4,7 +4,7 @@
   position: relative
   border-bottom: 1px solid $bd
   overflow: hidden
-  background: rgba(0, 0, 0, .3)
+  background: rgba(0, 0, 0, .4)
 
 .main_headline-bg
   position: absolute
@@ -31,13 +31,25 @@
   text-align: center
   font-weight: bold
 
+.main_headline-info
+  display: table
+  table-layout: fixed
+  width: 100%
+  margin: 40px 0
+
+.main_headline-info_inner
+  display: table-row
+
 .main_headline-left
-  float: left
+  display: table-cell
   width: 40%
+  text-align: center
+  vertical-align: middle
 
 .main_headline-right
-  float: left
+  display: table-cell
   width: 60%
+  vertical-align: middle
 
 .main_headline-title,
 .main_headline-description
@@ -45,9 +57,10 @@
   text-shadow: 0 1px 2px rgba(0, 0, 0, .5)
 
 .main_headline-description
-  margin: 30px 0 45px
+  display: inline-block
   font-size: 20px
   line-height: 30px
+  vertical-align: middle
 
   p
     margin: 15px 0 0
