--- a/app/assets/stylesheets/public/new_template/imports.sass
+++ b/app/assets/stylesheets/public/new_template/imports.sass
@@ -52,6 +52,11 @@ $red: #D20A2F
   &
     zoom: 1
 
+=animate_show
+  .no-transitions &,
+  &.animate-show
+    @content
+
 =orange_button
   background: #e46c37
   border: 1px solid #a65915
