--- a/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
@@ -31,6 +31,12 @@
   text-align: center
   font-weight: bold
 
+  opacity: 0
+  transition: opacity .5s
+
+  +animate_show
+    opacity: 1
+
 .main_headline-info
   display: table
   table-layout: fixed
@@ -57,10 +63,19 @@
   text-shadow: 0 1px 2px rgba(0, 0, 0, .5)
 
 .main_headline-description
+  position: relative
   display: inline-block
   font-size: 20px
   line-height: 30px
   vertical-align: middle
+
+  opacity: 0
+  top: -20px
+  transition: all .5s
+
+  +animate_show
+    opacity: 1
+    top: 0
 
   p
     margin: 15px 0 0
