--- a/app/views/public/landings/templates/new/_main_headline.html.slim
+++ b/app/views/public/landings/templates/new/_main_headline.html.slim
@@ -8,18 +8,7 @@
     .main_headline-info
       .main_headline-info_inner
         .main_headline-left
-          - photos = landing.landing_images.for_gallery
-          .photo_slider.js-headline-photos
-            .photo_slider-arrow_left
-              = fa_icon 'chevron-left'
-            .photo_slider-photo_wrap
-              .photo_slider-photo_inner
-                .photo_slider-photo style="background-image: url(#{photos.first.image.gallery.url});"
-                .photo_slider-zoom_button.js-open_gallery data-modal=public_landing_images_path
-                  = fa_icon 'search-plus'
-            .photo_slider-arrow_right
-              = fa_icon 'chevron-right'
-
+          = render 'public/landings/templates/new/photo_slider', landing: landing
         .main_headline-right
           .main_headline-description.js-headline-description
             = landing.short_description.html_safe
