Add timer + template improvements

--- a/app/assets/stylesheets/public/new_template/blocks/header.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/header.sass
@@ -4,6 +4,17 @@
   border-top: 2px solid #7390B5
   border-bottom: 1px solid $bd
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1)
+  background: rgba(255, 255, 255, .95)
+
+  &.is-fixed
+    position: fixed
+    top: 0
+    left: 0
+    right: 0
+    z-index: 100
+
+  &.is-hidden
+    opacity: 0
 
 .header-inner
   position: relative
