--- a/app/assets/stylesheets/public/new_template/blocks/cta.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/cta.sass
@@ -1,16 +1,7 @@
 @import 'public/new_template/imports'
 
 .cta
-  position: relative
   text-align: center
-
-  opacity: 0
-  top: -20px
-  transition: all .5s
-
-  +animate_show
-    opacity: 1
-    top: 0
 
 .cta-price
   position: relative
@@ -41,9 +32,20 @@
   font-weight: normal
 
 .cta-price_old
+  position: relative
+  display: inline-block
   color: $red
   font-size: 20px
   text-shadow: 0 1px 2px rgba(255, 255, 255, .5)
+
+  &:after
+    content: ''
+    position: absolute
+    left: 3px
+    top: 2px
+    width: 40px
+    height: 40px
+    +hidpi-inline('public/rounded_x_icon.png')
 
 .cta-button
   display: inline-block
