--- a/app/assets/stylesheets/public/new_template/blocks/cta.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/cta.sass
@@ -22,8 +22,6 @@
     +hidpi-inline('public/rounded_arrow_white.png')
 
 .cta-price_new
-  border-bottom: 1px dotted #fff
-  padding-bottom: 3px
 
 .cta-price_delimeter
   margin: 0 7px
@@ -34,9 +32,9 @@
 .cta-price_old
   position: relative
   display: inline-block
-  color: $red
+  color: #444
   font-size: 20px
-  text-shadow: 0 1px 2px rgba(255, 255, 255, .5)
+  text-shadow: none
 
   &:after
     content: ''
