--- a/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
@@ -99,11 +99,14 @@
   text-align: center
 
 .main_headline-timer_message
+  display: inline
+  padding-bottom: 3px
   font-size: 23px
-  line-height: 35px
+  line-height: 32px
+  border-bottom: 1px solid rgba(255, 255, 255, .7)
 
   span
     font-size: 27px
     color: $red
-    text-shadow: 0 1px 1px rgba(255, 255, 255, .7)
+    text-shadow: 0 1px rgba(255, 255, 255, .35)
     font-weight: bold
