--- a/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
+++ b/app/assets/stylesheets/public/new_template/blocks/main_headline.sass
@@ -98,11 +98,13 @@
 .main_headline-timer
   text-align: center
 
+.main_headline-timer_message_wrap
+
 .main_headline-timer_message
   display: inline
   padding-bottom: 3px
   font-size: 23px
-  line-height: 32px
+  line-height: 35px
   border-bottom: 1px solid rgba(255, 255, 255, .7)
 
   span
