--- a/app/views/public/landings/show.html.slim
+++ b/app/views/public/landings/show.html.slim
@@ -12,3 +12,11 @@
 
 = render 'public/landings/templates/new/header', landing: @landing
 = render 'public/landings/templates/new/main_headline', landing: @landing
+= render 'public/landings/templates/new/description', landing: @landing
+= render 'public/landings/templates/new/advantages', landing: @landing
+= render 'public/landings/templates/new/middle_page_cta', landing: @landing
+= render 'public/landings/templates/new/reviews', landing: @landing
+= render 'public/landings/templates/new/how_we_work', landing: @landing
+= render 'public/landings/templates/new/faq', landing: @landing
+= render 'public/landings/templates/new/footer_cta', landing: @landing
+= render 'public/landings/templates/new/footer', landing: @landing
