Implement debug mode for styles

--- a/app/assets/stylesheets/public/new_template/imports.sass
+++ b/app/assets/stylesheets/public/new_template/imports.sass
@@ -53,6 +53,10 @@ $red: #D20A2F
     zoom: 1
 
 =animate_show
+  .debug_mode &
+    transition: none
+    @content
+
   .no-transitions &,
   &.animate-show
     @content
