--- a/app/views/layouts/public.html.slim
+++ b/app/views/layouts/public.html.slim
@@ -37,5 +37,5 @@ html.layout
         .sizes(320, 480, 768, 960, 1200)
         .names({320: '-mobile', 480: '-small_tablet', 768: '-big_tablet', 960: '-small_screen', 1200: '-big_screen'});
 
-  body data-view='app#layout'
+  body data-view='app#layout' class=('debug_mode' if params[:debug] == 'true')
     = yield
