Add markup and styles for description and advantages

--- a/app/assets/stylesheets/public/new_template/imports.sass
+++ b/app/assets/stylesheets/public/new_template/imports.sass
@@ -10,6 +10,21 @@ $red: #D20A2F
   padding-left: 50px
   padding-right: 50px
 
+=acts_as_section_title
+  margin-bottom: 30px
+  font-size: 27px
+  line-height: 40px
+  font-weight: bold
+  text-transform: uppercase
+  text-align: center
+
+=acts_as_section_footer
+  font-size: 20px
+  line-height: 40px
+  font-weight: bold
+  text-transform: uppercase
+  text-align: center
+
 =lh_100p
   &:after
     display: inline-block
